--- a/9/CHANGELOG
+++ b/9/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20251222~sparky9~0 (2025-12-22)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20251209~sparky9~0 (2025-12-09)
 -------------------------------------------------------------------------------
   * added forkgram, xanmod linux kernel LTSv1
