--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20251222~sparky8~0 (2025-12-22)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20251209~sparky8~0 (2025-12-09)
 -------------------------------------------------------------------------------
   * added forkgram, xnamod linux kernel LTSv1
